[gd_scene load_steps=5 format=3 uid="uid://dmdjh0n40h6yo"]

[ext_resource type="Script" path="res://game/game.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://bni76tul1j5fr" path="res://game/fish 6.wav" id="2"]
[ext_resource type="FontFile" uid="uid://qsv1edqw6iir" path="res://game/Super Mario Bros. NES.ttf" id="2_4x077"]
[ext_resource type="PackedScene" uid="uid://bi40a5anqsmiw" path="res://game/clickable_label.tscn" id="3_6bty2"]

[node name="game" type="Node2D"]
script = ExtResource("1")

[node name="GameTime" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="LblScore" type="Label" parent="HUD"]
offset_left = 8.0
offset_top = -50.0
offset_right = 120.0
offset_bottom = -29.0
theme_override_fonts/font = ExtResource("2_4x077")
text = "Score: "

[node name="Label" type="Label" parent="HUD"]
offset_left = 408.0
offset_top = -48.0
offset_right = 488.0
offset_bottom = -27.0
theme_override_fonts/font = ExtResource("2_4x077")
text = "ccccc"

[node name="Label2" type="Label" parent="HUD"]
offset_left = 200.0
offset_top = 3.0
offset_right = 376.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("2_4x077")
text = "Normal Mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LblTitle" type="Label" parent="HUD"]
offset_left = 200.0
offset_top = 232.0
offset_right = 408.0
offset_bottom = 253.0
theme_override_fonts/font = ExtResource("2_4x077")
text = "Relex Game"
horizontal_alignment = 1

[node name="ClickableLabel" parent="HUD" instance=ExtResource("3_6bty2")]

[node name="LblTitle2" type="Label" parent="HUD"]
offset_left = 200.0
offset_top = 286.0
offset_right = 408.0
offset_bottom = 307.0
theme_override_fonts/font = ExtResource("2_4x077")
text = "Click to Play"

[node name="LblGameOver" type="Label" parent="HUD"]
offset_left = 121.0
offset_top = 272.0
offset_right = 508.0
offset_bottom = 362.0
theme_override_fonts/font = ExtResource("2_4x077")
theme_override_font_sizes/font_size = 24
text = "line 1
line 2
line 3
"
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2")
